# rw_gh-docs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_2.md  config.txt  config3.txt  config4.txt  gh_docs_bot.env  header.html  index.html  test.md
.github/workflows/: repo-create_doctoc_md.yml  security_analysis.yml  ssg5_manual.yml
assets/: header.htm
assets3/: footer.html  header.html
assets4/: template.html
dist3/: readme.html
dist3/fold1/: fold1.htm  folder1.html
dist3/fold1/fold2/: fold2.htm  folder2.html
dist3/fold3/: anfang.htm  section.htm
dist4/: readme.html
dist4/fold1/: fold1.html  folder1.html
dist4/fold1/fold2/: fold.html  folder2.html
dist4/fold3/: anfang.html  section.html
dist4/fold4/: index.html
docs/: atom_v2.1.0.json  cake_1.md  sbom_v2.1.0.json
docs/2025/: cake_1.md  cake_2.md
docs/2026/: cake_1.md  cake_2.md  cake_3.md
fold1/: fold1.html
fold1/fold2/: folder2.html
input/: index.md  readme.md
input/fold1/: fold1.htm  fold1.md  folder1.md
input/fold1/fold2/: fold.md  folder2.md
input/fold3/: anfang.htm  anfang.md  section.htm  section.md
input/fold4/: index.md
public/: readme.html
public/assets/css/: main4.css
public/fold1/: folder1.html
public/fold1/fold2/: fold.html
public/fold3/: anfang.html  section.html
public/fold4/: index.html
src/: main.cpp  main2.cpp  main3.cpp  main4 copy.cpp  main4.cpp  main5 copy.cpp  main5.cpp  ssg  ssg3  ssg4  test.cpp
